# Proland_dev

./: .gitignore  CMakeLists.txt  ISSUES  README-DISTRIB.TXT  README.md
core/examples/helloworld/: CMakeLists.txt  HelloWorld.cpp  core-helloworld.1.trace  core-helloworld.trace  helloworld.xml  log.html  text.xml
core/examples/helloworld/config/: terrainShader.glsl
core/examples/twbartest/: CMakeLists.txt  HelloWorld.cpp
core/sources/proland/: CMakeLists.txt  proland-core.pc.in
core/sources/proland/math/: color.cpp  color.h  geometry.h  noise.cpp  noise.h  seg2.h
core/sources/proland/particles/: LifeCycleParticleLayer.cpp  LifeCycleParticleLayer.h  ParticleLayer.cpp  ParticleLayer.h  ParticleProducer.cpp  ParticleProducer.h  ParticleStorage.cpp  ParticleStorage.h  RandomParticleLayer.cpp  RandomParticleLayer.h  WorldParticleLayer.cpp  WorldParticleLayer.h
core/sources/proland/particles/screen/: ParticleGrid.cpp  ParticleGrid.h  ScreenParticleLayer.cpp  ScreenParticleLayer.h
core/sources/proland/particles/terrain/: FlowTile.cpp  FlowTile.h  TerrainParticleLayer.cpp  TerrainParticleLayer.h
core/sources/proland/producer/: CPUTileStorage.cpp  CPUTileStorage.h  GPUTileStorage.cpp  GPUTileStorage.h  ObjectTileStorage.cpp  ObjectTileStorage.h  TileCache.cpp  TileCache.h  TileLayer.cpp  TileLayer.h  TileProducer.cpp  TileProducer.h  TileStorage.cpp  TileStorage.h
core/sources/proland/terrain/: CylindricalDeformation.cpp  CylindricalDeformation.h  Deformation.cpp  Deformation.h  DrawTerrainTask.cpp  DrawTerrainTask.h  ReadbackManager.cpp  ReadbackManager.h  SphericalDeformation.cpp  SphericalDeformation.h  TerrainNode.cpp  TerrainNode.h  TerrainQuad.cpp  TerrainQuad.h  TileSampler.cpp  TileSampler.h  TileSamplerZ.cpp  TileSamplerZ.h  UpdateTerrainTask.cpp  UpdateTerrainTask.h  UpdateTileSamplersTask.cpp  UpdateTileSamplersTask.h
core/sources/proland/ui/: BasicViewHandler.cpp  BasicViewHandler.h  EventRecorder.cpp  EventRecorder.h  MousePositionHandler.cpp  MousePositionHandler.h  SceneVisitor.cpp  SceneVisitor.h
core/sources/proland/ui/twbar/: DrawTweakBarTask.cpp  DrawTweakBarTask.h  TweakBarHandler.cpp  TweakBarHandler.h  TweakBarManager.cpp  TweakBarManager.h  (+6 more)
core/sources/proland/util/: CylinderViewController.cpp  CylinderViewController.h  PlanetViewController.cpp  PlanetViewController.h  TerrainViewController.cpp  TerrainViewController.h  mfs.cpp  mfs.h
demo/: CMakeLists.txt  ProlandDemo.cpp  demo-earth-borders.sh  demo-earth-clouds.sh  demo-earth-ocean.sh  demo-earth-simple.sh  demo-earth-srtm-ALL.sh  demo-earth-srtm-clouds.sh  demo-earth-srtm-trees2D.sh  demo-earth-srtm.sh  demo-earth.sh  demo-fractalplanet.sh  demo-fractalterrain-trees2D.sh  demo-fractalterrain-trees3D.sh  demo-fractalterrain.sh  init.sh  log.html
demo/shaders/: debugShader.glsl  globalsShader.glhl  globalsShader.glsl  textureQuadtree.glsl  textureTile.glsl
demo/shaders/atmo/: atmosphereShader.glhl  atmosphereShader.glsl  skyShader.glsl
demo/shaders/camera/: bloomShader.glsl  postprocessShader.glsl
demo/shaders/clouds/: cloudShader.glsl  cloudShader2.glsl  cloudShader2.xml  clouds.glhl  clouds.glsl
demo/shaders/earth/: earthShader-flip.glsl  earthShader.glsl  fractalplanetShader.glsl
demo/shaders/ocean/: fftInitShader.glsl  fftxShader.glsl  fftyShader.glsl  oceanBrdf.glhl  oceanBrdf.glsl  oceanFFTShader.glsl  oceanShader.glsl  variancesShader.glsl
demo/shaders/rivers/: renderRiversShader.glsl
demo/shaders/terrain/: fractalTerrainShader.glsl  terrainShader.glsl
demo/shaders/trees/: renderTreeShader2D.glsl  renderTreeShadow2D.glsl  selectTreeShader.glsl
demo/textures/atmo/: irradiance.raw  transmittance.raw
edit/sources/proland/: CMakeLists.txt  EditPlugin.cpp  EditPlugin.h  proland-edit.pc.in
edit/sources/proland/edit/: EditElevationProducer.cpp  EditElevationProducer.h  EditGraphOrthoLayer.cpp  EditGraphOrthoLayer.h  EditHydroGraphOrthoLayer.cpp  EditHydroGraphOrthoLayer.h  EditOrthoCPUProducer.cpp  EditOrthoCPUProducer.h  EditOrthoProducer.cpp  EditOrthoProducer.h  EditResidualProducer.cpp  EditResidualProducer.h  EditorHandler.cpp  EditorHandler.h
graph/sources/proland/: CMakeLists.txt  GraphPlugin.cpp  GraphPlugin.h  proland-graph.pc.in
graph/sources/proland/dem/: ElevationCurveData.cpp  ElevationCurveData.h  ElevationGraphLayer.cpp  ElevationGraphLayer.h  ElevationMargin.cpp  ElevationMargin.h  RoadElevationLayer.cpp  RoadElevationLayer.h  WaterElevationLayer.cpp  WaterElevationLayer.h
graph/sources/proland/graph/: Area.cpp  Area.h  BasicCurvePart.cpp  BasicCurvePart.h  BasicGraph.cpp  BasicGraph.h  ComposedMargin.cpp  ComposedMargin.h  Curve.cpp  Curve.h  CurvePart.cpp  CurvePart.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Graph.cpp  Graph.h  GraphListener.cpp  GraphListener.h  LazyArea.cpp  LazyArea.h  LazyCurve.cpp  LazyCurve.h  LazyGraph.cpp  LazyGraph.h  LazyNode.cpp  LazyNode.h  LineCurvePart.cpp  LineCurvePart.h  Margin.cpp  Margin.h  Node.cpp  Node.h
graph/sources/proland/ortho/: FieldsOrthoLayer.cpp  FieldsOrthoLayer.h  ForestOrthoLayer.cpp  ForestOrthoLayer.h  LineOrthoLayer.cpp  LineOrthoLayer.h  MaskOrthoLayer.cpp  MaskOrthoLayer.h  OrthoMargin.cpp  OrthoMargin.h  RoadOrthoLayer.cpp  RoadOrthoLayer.h  WaterOrthoLayer.cpp  WaterOrthoLayer.h
ocean/sources/proland/: CMakeLists.txt  OceanPlugin.cpp  OceanPlugin.h  proland-ocean.pc.in
ocean/sources/proland/ocean/: DrawOceanFFTTask.cpp  DrawOceanFFTTask.h  DrawOceanTask.cpp  DrawOceanTask.h
terrain/examples/preprocess/: CMakeLists.txt  HelloWorld.cpp
terrain/sources/proland/: CMakeLists.txt  TerrainPlugin.cpp  TerrainPlugin.h  proland-terrain.pc.in
terrain/sources/proland/dem/: CPUElevationProducer.cpp  CPUElevationProducer.h  ElevationProducer.cpp  ElevationProducer.h  NormalProducer.cpp  NormalProducer.h  ResidualProducer.cpp  ResidualProducer.h
terrain/sources/proland/ortho/: EmptyOrthoLayer.cpp  EmptyOrthoLayer.h  OrthoCPUProducer.cpp  OrthoCPUProducer.h  OrthoGPUProducer.cpp  OrthoGPUProducer.h  OrthoProducer.cpp  OrthoProducer.h  TextureLayer.cpp  TextureLayer.h
(+155 files in other folders)
